--- a/Develop/index.html
+++ b/Develop/index.html
@@ -55,7 +55,7 @@
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png" alt="lead generation graphic"/>
                 <figcaption>
-                    Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+                    Inbound strategies for lead generation require less work for your business, bringing customers directly to your website!
                 </figcaption>
             </figure>
             <figure class="benefit-brand">
