--- a/Develop/index.html
+++ b/Develop/index.html
@@ -27,21 +27,21 @@
     <main>
         <section class="hero" alt="image of 4 people in a meeting"></section>
         <section class="content">
-            <figure id="search-engine-optimization" class="search-engine-optimization">
+            <figure id="search-engine-optimization" class="search-engine-optimization height">
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Image of SEO on a notebook at a workspace"/>
                 <h2>Search Engine Optimization</h2>
                 <figcaption>
                     The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                 </figcaption>
             </figure>
-            <figure id="online-reputation-management" class="online-reputation-management">
+            <figure id="online-reputation-management" class="online-reputation-management height">
                 <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="image of a laptop with a graph showing increasing reputation"/>
                 <h2>Online Reputation Management</h2>
                 <figcaption>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                 </figcaption>
             </figure>
-            <figure id="social-media-marketing" class="social-media-marketing">
+            <figure id="social-media-marketing" class="social-media-marketing height">
                 <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="image of social media actions on a table"/> 
                 <h2>Social Media Marketing</h2>
                 <figcaption>
