change image name

--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
                 </figcaption>
             </figure>
             <figure id="social-media-marketing" class="social-media-marketing height">
-                <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="image of social media actions on a table"/> 
+                <img src="./assets/images/image3.jpg" class="float-left" alt="image of social media actions on a table"/> 
                 <h2>Social Media Marketing</h2>
+                
                 <figcaption>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
                 </figcaption>
